styles/globals.css
* {
  box-sizing: border-box;
  /* check positioning */
  /* outline: 1px solid limegreen !important; */
  /* background: rgb(0 100 0 / 0.1) !important; */
}

html,
body {
  padding: 0;
  margin: 0;
}

.fw-400 {
  font-weight: 400;
}

.card {
  /* shadow visualizer site */
  /* https://manuarora.in/boxshadows */
  box-shadow: 0px 5px 5px 0px #00000024;
}

.card-text {
  white-space: pre-wrap;
}

textarea {
  min-height: 100px !important;
}

/* footer  */
.footer {
  border-top: 2px solid rgb(17, 202, 240);
  background-color: rgb(17, 202, 240, 0.25);
}

.footer-links {
  color: black;
  font-weight: 300;
}

.social-icons li {
  display: inline-block;
  padding-right: 1rem;
}

.footer .nav-links li {
  display: inline-block;
  padding-right: 1rem;
}

.page-marker {
  max-width: 576px;
  margin-right: auto;
  margin-left: auto;
  min-height: 64vh;
}

.waze-map {
  max-width: 576px;
  margin-right: auto;
  margin-left: auto;
}

.image-fluid {
  /* fix next Image component warning */
  width: auto;
}

.black-link {
  color: black;
}

.navbar-clearance {
  margin-top: 6.75rem;
  text-align: center;
  min-height: calc(64vh - 110px);
  padding-bottom: 5rem;
}

.hamburger {
  margin-top: 2vh;
  margin-right: 1.5vh;
}

.navbar {
  padding: 1rem 0.625rem 0.375rem 0.625rem;
  background-color: white;
  opacity: 0.99;
  text-align: center;
  font-weight: 300;
}

h2,
h4,
p,
label,
.mobile-nav-links,
.card-text,
.home-page-text,
.form-select {
  font-weight: 300;
}

.form-floating > label {
  padding-left: 1.25rem;
}

a {
  text-decoration: none;
}

/* nav links */
nav a.nav-link {
  cursor: pointer;
}

.nav-item {
  text-align: center;
  font-weight: 300;
}

.navbar-light .navbar-toggler {
  border-color: white;
}

/* Animated Hamburger */
.navbar-toggler span {
  display: block;
  background-color: #212529;
  height: 0.1875rem;
  width: 1.5625rem;
  margin-top: 0.3125rem;
  margin-bottom: 0.3125rem;
  position: relative;
  left: 0;
  opacity: 1;
  transition: all 0.15s ease-out;
  transform-origin: center left;
}

.navbar-toggler span:nth-child(1) {
  margin-top: 0.3em;
}

.navbar-toggler:not(.collapsed) span:nth-child(1) {
  transform: translate(15%, -33%) rotate(45deg);
}

.navbar-toggler:not(.collapsed) span:nth-child(2) {
  opacity: 0;
}

.navbar-toggler:not(.collapsed) span:nth-child(3) {
  transform: translate(15%, 33%) rotate(-45deg);
}

.navbar-toggler span:nth-child(1) {
  transform: translate(0%, 0%) rotate(0deg);
}

.navbar-toggler span:nth-child(2) {
  opacity: 1;
}
.navbar-toggler span:nth-child(3) {
  transform: translate(0%, 0%) rotate(0deg);
}

/* collapsible list */
.expand {
  overflow: hidden;
  transition: height 0.5s;
  box-shadow: 0px 5px 5px -5px #00000024;
  margin-left: -1.5rem;
  margin-right: -1.5rem;
}

@media (min-width: 576px) {
  .card-text,
  .error-msg {
    text-align: left;
  }
  .navbar-clearance {
    margin-top: 7.35rem;
  }
}

